After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 669917 - [PATCH] Fix a possible memory leak in menu_position()
[PATCH] Fix a possible memory leak in menu_position()
Status: RESOLVED FIXED
Product: gedit
Classification: Applications
Component: general
unspecified
Other Linux
: Normal normal
: ---
Assigned To: Gedit maintainers
Gedit maintainers
Depends on:
Blocks:
 
 
Reported: 2012-02-12 00:21 UTC by Daniel Trebbien
Modified: 2012-02-12 10:53 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Fix (766 bytes, patch)
2012-02-12 00:22 UTC, Daniel Trebbien
none Details | Review

Description Daniel Trebbien 2012-02-12 00:21:05 UTC
Note: I am not 100% sure about this, but I think that menu_position() in gedit-documents-panel.c is leaking a GtkTreePath. It seems to me that `path` should be freed with gtk_tree_path_free(). But am I missing something?
Comment 1 Daniel Trebbien 2012-02-12 00:22:46 UTC
Created attachment 207374 [details] [review]
Fix
Comment 2 Paolo Borelli 2012-02-12 10:53:23 UTC
Looks correct to me.

Applied.