Fix a memory leak

In menu_position(), free the GtkTreePath that was returned by
get_current_path().

https://bugzilla.gnome.org/show_bug.cgi?id=669917